--- a/Main-page/getProjectById.html
+++ b/Main-page/getProjectById.html
@@ -139,7 +139,7 @@
     <section class="home">
 
 
-        <div class="text">Projects</div>   
+        <div class="text" id="ProjectName">Projects</div>   
 
         <div class="container mt-5">
             <div class="row mt-5">
@@ -243,6 +243,7 @@
         </div>
     </div>
 
+    <script src="./assets/js/projects/getProjectById.js"></script>
     <script src="../Landing-page/assets/js/logoutScript.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
     <script src="./assets/js/userController.js"></script>
