--- a/Main-page/teams.html
+++ b/Main-page/teams.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
+    <link rel="stylesheet" href="./assets/css/teams.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -140,7 +141,15 @@
     <section class="home">
 
 
-        <div class="text">Teams</div>
+        <div class="container pt-5">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="createNewTeam_card card text-center">
+                        <p>+</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
 
