--- a/Main-page/teams.html
+++ b/Main-page/teams.html
@@ -143,8 +143,49 @@
 
         <div class="container pt-5">
             <div class="row">
+
+
                 <div class="col-md-4">
-                    <div class="createNewTeam_card card text-center">
+                    <div class="project_card card">
+                        <div class="container">
+                         <div class="row">
+                            <div class="col-12">
+                            <img class="project_image mt-4" src="https://images.unsplash.com/photo-1542626991-cbc4e32524cc?crop=faces%2Cedges&cs=tinysrgb&fit=crop&fm=jpg&ixid=MnwxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjgwODgwNjIx&ixlib=rb-4.0.3&q=60&w=1200&auto=format&h=630&mark-w=64&mark-align=top%2Cleft&mark-pad=50&blend-mode=normal&blend-alpha=10&blend-w=1&mark=https%3A%2F%2Fimages.unsplash.com%2Fopengraph%2Flogo.png&blend=000000" alt="">
+                            <div class="project_owner">
+                                <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">    
+                                
+                            </div>
+                            <div class="col-12 text-center mt-4">
+                                <p class="project_owner_name">Csapat neve</p> 
+                                <p>tagok száma</p> 
+                            </div>
+                            </div>
+                        </div>
+                        <div class="row ">
+                            <div class="col-6 text-center">
+                                <div class="btn btn-success p-button">Meghívás</div>
+                            </div> 
+                            <div class="col-6 text-center">
+                                <div class="btn btn-danger p-button">Kilépés</div>
+                            </div>
+                        </div>
+                        <div class="row mt-4">
+                            <div class="col-12">
+                                <div class="collabs">
+                                    <ul>
+                                        <li><img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt=""> <p>@02-user és további 2 ember társaságában.</p></li>
+                                    </ul>
+
+                                    </div>                
+                            </div>
+                        </div>
+                        </div>
+                        </div>
+                </div>
+
+
+                <div class="col-md-4">
+                    <div class="createNewTeam_card card">
                         <p>+</p>
                     </div>
                 </div>
