--- a/Main-page/getProjectById.html
+++ b/Main-page/getProjectById.html
@@ -12,6 +12,7 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/projectById.css">    
     
     <title>P-project</title>
 </head>
@@ -139,17 +140,29 @@
     <section class="home">
 
 
-        <div class="text" id="ProjectName">Projects</div>   
+        <div class="text" id="ProjectName">Projects</div> 
+        <div class="container-fluid mt-5">
+            <div class="row">
+                <div class="col-md-3 members">
+                    <img class="" src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
+                    <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
+                    <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">    
+                </div>
+                <div class="col-md-9">
+
+                </div>
+            </div>
+        </div> 
 
         <div class="container mt-5">
             <div class="row mt-5">
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-2 col-sm-12">
 
                     <div class="card">
                         <div class="card-header">
-                            Teendő
+                            Under Creation
                         </div>
-                        <div class="card-body column">
+                        <div class="card-body column text-center">
 
                             <div class="card" draggable="true">
                                 <div class="card-header">P-project</div>
@@ -158,15 +171,17 @@
                                 </div>
                             </div>
 
+
+                            <div class="btn btn-success mt-2">Add Task</div>
                         </div>
                     </div>
 
                 </div>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-2 col-sm-12 text-center">
 
                     <div class="card">
                         <div class="card-header">
-                            Folyamatban
+                            To-Do
                         </div>
                         <div class="card-body column">
 
@@ -174,11 +189,50 @@
                     </div>
 
                 </div>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-2 col-sm-12 text-center">
 
                     <div class="card">
                         <div class="card-header">
-                            Kész
+                            In Dev. Progress
+                        </div>
+                        <div class="card-body column">
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-md-2 col-sm-12 text-center">
+
+                    <div class="card">
+                        <div class="card-header">
+                            To Review
+                        </div>
+                        <div class="card-body column">
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-md-2 col-sm-12 text-center">
+
+                    <div class="card">
+                        <div class="card-header">
+                            In Review
+                        </div>
+                        <div class="card-body column">
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-md-2 col-sm-12 text-center">
+
+                    <div class="card">
+                        <div class="card-header">
+                            Done
                         </div>
                         <div class="card-body column">
 
