--- a/Main-page/getProjects.html
+++ b/Main-page/getProjects.html
@@ -151,11 +151,11 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div class="project_card card text-center">
+                    <div class="project_card card">
                     <div class="container">
                      <div class="row">
                         <div class="col-12">
-                        <div class="project_number text-center mt-3"><p>1.</p></div>
+                        <div class="project_number"><p>1.</p></div>
                         <img class="project_image mt-4" src="https://images.unsplash.com/photo-1542626991-cbc4e32524cc?crop=faces%2Cedges&cs=tinysrgb&fit=crop&fm=jpg&ixid=MnwxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjgwODgwNjIx&ixlib=rb-4.0.3&q=60&w=1200&auto=format&h=630&mark-w=64&mark-align=top%2Cleft&mark-pad=50&blend-mode=normal&blend-alpha=10&blend-w=1&mark=https%3A%2F%2Fimages.unsplash.com%2Fopengraph%2Flogo.png&blend=000000" alt="">
                         <div class="project_owner">
                             <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">    
@@ -164,24 +164,26 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6 ">
+                        <div class="col-12">
                             <p class="description">Fülszöveg/Project rövid leírása...</p>
-                        </div>
-                        <div class="col-6">
+                        </div> 
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
                             <div class="collabs">
-                            <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
-                            <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
-                            <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
-                            </div>
-                            <p>@02-user és további 2 ember társaságában.</p>
-                        </div>  
+                                <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
+                                <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
+                                <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
+                                </div>
+                                <p>@02-user és további 2 ember társaságában.</p>
+                        </div>
                     </div>
                     <div class="row mt-3 mb-3">
                         <div class="col-6 ">
                             YYYY/MM/DD
                         </div>
                         <div class="col-6 ">
-                            <div class="btn btn-info">Project megnyitása</div>
+                            <div class="btn btn-info p-button">Project megnyitása</div>
                         </div>
                     </div>
                     </div>
