--- a/Main-page/getProjects.html
+++ b/Main-page/getProjects.html
@@ -144,68 +144,19 @@
     <section class="home pt-5">
 
         <div class="container">
-            <div class="row">
+            <div class="row" id="projects">
+ 
 
-                <div id="projects">
-
-                </div>
-
-                <div class="col-md-4">
-                    <div class="project_card card">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="project_number">
-                                        <p>1.</p>
-                                    </div>
-                                    <img class="project_image mt-4"
-                                        src="https://images.unsplash.com/photo-1542626991-cbc4e32524cc?crop=faces%2Cedges&cs=tinysrgb&fit=crop&fm=jpg&ixid=MnwxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjgwODgwNjIx&ixlib=rb-4.0.3&q=60&w=1200&auto=format&h=630&mark-w=64&mark-align=top%2Cleft&mark-pad=50&blend-mode=normal&blend-alpha=10&blend-w=1&mark=https%3A%2F%2Fimages.unsplash.com%2Fopengraph%2Flogo.png&blend=000000"
-                                        alt="">
-                                    <div class="project_owner">
-                                        <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
-                                        <p class="project_owner_name">@Felhasználónév</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <p class="description">Fülszöveg/Project rövid leírása...</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="collabs">
-                                        <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
-                                        <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
-                                        <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="">
-                                    </div>
-                                    <p>@02-user és további 2 ember társaságában.</p>
-                                </div>
-                            </div>
-                            <div class="row mt-3 mb-3">
-                                <div class="col-6 ">
-                                    YYYY/MM/DD
-                                </div>
-                                <div class="col-6 ">
-                                    <div class="btn btn-info p-button">Project megnyitása</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4" data-bs-toggle="modal" data-bs-target="#projectCreate">
+                
+                <div class="col-md-4 mb-2" data-bs-toggle="modal" data-bs-target="#projectCreate">
                     <div class="project_card_create card text-center ">
                         <p>+</p>
                     </div>
-                </div>
-
-
-
-
-
+                </div>  
 
             </div>
+
+           
 
         </div>
 
@@ -264,7 +215,7 @@
             </div>
         </div>
     </div>
-
+    <script src="./assets/js/projects/getAllProjectsController.js"></script>
     <script src="../Landing-page/assets/js/logoutScript.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./assets/js/projects/getProjectsController.js"></script>
