--- a/Main-page/getProjects.html
+++ b/Main-page/getProjects.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/main_style.css">
     <link rel="stylesheet" href="./assets/css/project.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -141,18 +141,30 @@
 
 
 
-    <section class="home pt-5">
+    <section class="home pt-3">
+
+
 
         <div class="container">
+
+
+
+
             <div class="row" id="projects">
  
 
                 
+
+
+
                 <div class="col-md-4 mb-2" data-bs-toggle="modal" data-bs-target="#projectCreate">
-                    <div class="project_card_create card text-center ">
+                    <div class="project_card_create card text-center">
                         <p>+</p>
                     </div>
                 </div>  
+
+
+  
 
             </div>
 
@@ -215,15 +227,23 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+
     <script src="./assets/js/projects/getAllProjectsController.js"></script>
     <script src="../Landing-page/assets/js/logoutScript.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./assets/js/projects/getProjectsController.js"></script>
+    <script src="./assets/js/projects/newProjectsController.js"></script>
     <script src="./assets/js/userController.js"></script>
     <script src="./assets/js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+
+      
 
 
 </body>
