--- a/Main-page/calendar.html
+++ b/Main-page/calendar.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./assets/css/calendar.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/main_style.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -50,7 +50,7 @@
                     </li>
 
                     <li class="">
-                        <a href="./getProjects.html">
+                        <a href="./getAllProjects.html">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Projects</span>
                         </a>
@@ -82,7 +82,7 @@
 
             <div class="bottom-content">
                 <li class="">
-                    <a id="logOutBtn">
+                    <a class="logOutBtn">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Logout</span>
                     </a>
@@ -117,7 +117,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./getProjects.html">Projects</a>
+                        <a class="nav-link active" aria-current="page" href="./getAllProjects.html">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./calendar.html">Calendar</a>
