--- a/Main-page/getAllProjects.html
+++ b/Main-page/getAllProjects.html
@@ -54,7 +54,7 @@
 
 
                     <li class="">
-                        <a href="./getProjects.html">
+                        <a href="./getAllProjects.html">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Projects</span>
                         </a>
@@ -121,7 +121,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./getProjects.html">Projects</a>
+                        <a class="nav-link active" aria-current="page" href="./getAllProjects.html">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./calendar.html">Calendar</a>
