--- a/Main-page/teams.html
+++ b/Main-page/teams.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <nav class="sidebar close d-none d-lg-block">
+    <nav class="sidebar close">
         <header>
             <div class="image-text">
                 <span class="image">
@@ -90,7 +90,7 @@
                     </a>
                 </li>
 
-                <li class="mode">
+                <li class="mode mb-4">
                     <div class="sun-moon">
                         <i class='bx bx-moon icon moon'></i>
                         <i class='bx bx-sun icon sun'></i>
@@ -108,35 +108,7 @@
     </nav>
 
 
-    <nav class="d-lg-none navbar navbar-expand-lg felso-nav">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                P-project
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./getAllProjects.html">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./calendar.html">Calendar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-5" href="./teams.html">Teams</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-5 logOutBtn">Kijelentkezés</a>
-                    </li>
-                </ul>
-                <a href="#" class="btn btn-outline-secondary shadow-sm d-sm d-block">Kép</a>
-            </div>
-        </div>
-    </nav>
-
+  
 
     <section class="home">
 
