--- a/Main-page/getProjectById.html
+++ b/Main-page/getProjectById.html
@@ -134,7 +134,7 @@
                 <div class="col-md-2 col-sm-12">
 
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header bg1">
                             Under Creation
                         </div>
                         <div class="card-body column text-center" id="tasks">
@@ -144,7 +144,7 @@
 
                         </div>
 
-                        <div class="btn btn-success mt-2"  data-bs-toggle="modal" data-bs-target="#taskCreate">Add Task</div>
+                        <div class="btn btn-success mt-4"  data-bs-toggle="modal" data-bs-target="#taskCreate">Add Task</div>
 
                         
                     </div>
@@ -153,7 +153,7 @@
                 <div class="col-md-2 col-sm-12 text-center">
 
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header bg2">
                             To-Do
                         </div>
                         <div class="card-body column">
@@ -165,7 +165,7 @@
                 <div class="col-md-2 col-sm-12 text-center">
 
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header bg1">
                             In Dev. Progress
                         </div>
                         <div class="card-body column">
@@ -178,7 +178,7 @@
                 <div class="col-md-2 col-sm-12 text-center">
 
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header bg2">
                             To Review
                         </div>
                         <div class="card-body column">
@@ -191,7 +191,7 @@
                 <div class="col-md-2 col-sm-12 text-center">
 
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header bg1">
                             In Review
                         </div>
                         <div class="card-body column">
@@ -204,7 +204,7 @@
                 <div class="col-md-2 col-sm-12 text-center">
 
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header bg2">
                             Done
                         </div>
                         <div class="card-body column">
