--- a/Landing-page/oldIndex.html
+++ b/Landing-page/oldIndex.html
@@ -8,46 +8,47 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="shortcut icon" href="/assets/img/brand/favicon.svg" type="image/x-icon">
   <title>P-project landing page</title>
 </head>
 
 <body>
 
+  <!--Navbar section-->
+
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        P-project
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link me-5" href="#setup">Setup</a>
+          </li>
+        </ul>
+        <a data-bs-toggle="modal" data-bs-target="#bejelentkezes" class="btn btn-outline-secondary shadow-sm d-sm d-block">Login</a>
+      </div>
+    </div>
+  </nav>
+
+  <!--Navbar ends-->
 
   <div class="container-fluid">
     <div class="row">
 
-      <div class="col-md-6 ">
-
+      <div class="col-md-6 backImg">
 
       </div>
 
-      <div class="loginField col-md-6 text-center ">
-
-        <h2 class="brand">P-project</h2>
-
-        <div class="loginForm">
-
-        <form id="logForm">
-
-            <label for="exampleInputEmail1" class="inputText" >Email Cím</label>
-            <input type="email"  id="emailInput" class="inputs" placeholder="     valaki@gmail.com" name="email" aria-describedby="emailHelp" required>
-
-
-
-            <label for="exampleInputPassword1"  class="inputText">Password</label>
-            <input type="password" name="password" class="inputs" placeholder="     ******" id="passwordInput" required>
-
-            <a href="" class="forgotPassword">Elfelejtett jelszó</a>
-
-        <button type="submit" class="log_btn">Bejelentkezés</button>
-
-
-        <a href="./registration.html" class="reg_btn text-center">Regisztráció</a>
-        
-      </form>
-
-    </div>  
+      <div class="col-md-6">
 
       </div>
     </div>
@@ -55,7 +56,105 @@
 
 
 
+  <!-- Landing section -->
 
+  <section class="hero" id="home">
+    <div class="container">
+      <div class="row">
+        <!--Text-->
+        <div class="col-md-6">
+          <div class="text">
+            Make your project with us More faster and More better
+          </div>
+          <div class="buttins">
+            <a href="" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#bejelentkezes">Login</a>
+            <a href="" class="btn btn-outline-secondary ms-3" data-bs-toggle="modal"
+              data-bs-target="#regist">Registration</a>
+          </div>
+        </div>
+        <!--Image-->
+        <div class="col-md-6">
+          <img src="assets/img/hero-img.svg" alt="hero-img" class="w-100">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Landing ends -->
+
+  <!-- Setup section-->
+  <section class="setup" id="setup">
+    <div class="container">
+      <div class="text-header text-center">
+        <h3>Get started quickly</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis placeat magni quam harum.</p>
+      </div>
+      <div class="items text-center">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="icons">
+              <img src="assets/img/icons/icons-1.svg" alt="icons">
+            </div>
+            <div class="desc">
+              <h5>Create acocunt</h5>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius numquam ea reprehenderit quibusdam? Nam
+                distinctio illum ea, impedit atque aperiam.</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="icons">
+              <img src="assets/img/icons/icons-2.svg" alt="icons">
+            </div>
+            <div class="desc">
+              <h5>Setup your project</h5>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius numquam ea reprehenderit quibusdam? Nam
+                distinctio illum ea, impedit atque aperiam.</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="icons">
+              <img src="assets/img/icons/icons-3.svg" alt="icons">
+            </div>
+            <div class="desc">
+              <h5>Invite collaborators</h5>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius numquam ea reprehenderit quibusdam? Nam
+                distinctio illum ea, impedit atque aperiam.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Setup ends-->
+
+  <!-- Footer-->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row row-cols-1 row-col-lg-5 g-2 g-lg-3">
+            <div class="col-md-6">
+              <div>
+                <small>
+                  <a href="#home" class="text-decoration-none">Home</a>
+                </small>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div>
+                <small>
+                  <a href="#setup" class="text-decoration-none">Setup</a>
+                </small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="copy">
+          &copy; 2023 P-Project
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- Footer ends-->
 
 
   <!-- Bejelentkezés Modal -->
