Pár code laptopról

--- a/Main-page/editTeam.html
+++ b/Main-page/editTeam.html
@@ -117,13 +117,8 @@
             <div class="row" id="teams">
 
 
+                <h1 id="teamNameField"></h1>
 
-
-                <div class="col-md-4 mb-2" data-bs-toggle="modal" data-bs-target="#teamCreate">
-                    <div class="createNewTeam_card card">
-                        <p>+</p>
-                    </div>
-                </div>
 
 
             </div>
