--- a/Main-page/teams.html
+++ b/Main-page/teams.html
@@ -147,6 +147,19 @@
 
                             <label for="teamName" class="form-label">Csapat neve</label>
                             <input type="text" class="form-control" id="teamName" name="setTeamName" required>
+                        </div>
+
+                        <div class="mb-3 addUserField text-center" id="addUserField">
+
+
+
+
+
+                        </div>
+
+                        <div class="mb-3 text-center">
+
+                            <button class="btn btn-primary" onClick="addNewUserToField()"> + </button>
 
                         </div>
 
@@ -165,6 +178,7 @@
     </div>
 
 
+    
     <script src="./assets/js/teams/getAllTeamController.js"></script>
     <script src="./assets/js/teams/newTeamController.js"></script>
     <script src="../Landing-page/assets/js/logoutScript.js"></script>
