--- a/Main-page/getProjectById.html
+++ b/Main-page/getProjectById.html
@@ -138,7 +138,7 @@
                         <div class="card-header bg1">
                             Under Creation
                         </div>
-                        <div class="card-body column text-center" id="tasks">
+                        <div class="card-body column text-center" id="1">
 
 
                            
@@ -157,7 +157,7 @@
                         <div class="card-header bg2">
                             To-Do
                         </div>
-                        <div class="card-body column">
+                        <div class="card-body column" id="2">
 
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                         <div class="card-header bg1">
                             In Dev. Progress
                         </div>
-                        <div class="card-body column">
+                        <div class="card-body column" id="3">
 
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                         <div class="card-header bg2">
                             To Review
                         </div>
-                        <div class="card-body column">
+                        <div class="card-body column" id="4">
 
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                         <div class="card-header bg1">
                             In Review
                         </div>
-                        <div class="card-body column">
+                        <div class="card-body column" id="5">
 
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                         <div class="card-header bg2">
                             Done
                         </div>
-                        <div class="card-body column">
+                        <div class="card-body column" id="6">
 
                         </div>
                     </div>
