--- a/Main-page/profile.html
+++ b/Main-page/profile.html
@@ -40,7 +40,7 @@
 
 
 
-                <ul class="menu-links search-box">
+                <ul class="menu-links">
 
                     <li class="search-box toggle2">
                         <i class='bx bx-search icon'></i>
