--- a/Main-page/getAllProjects.html
+++ b/Main-page/getAllProjects.html
@@ -43,7 +43,7 @@
 
 
 
-                <ul class="menu-links search-box">
+                <ul class="menu-links">
 
                     <li class="search-box toggle2">
                         <i class='bx bx-search icon'></i>
