--- a/Main-page/teams.html
+++ b/Main-page/teams.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-
     <nav class="sidebar close">
         <header>
             <div class="image-text">
@@ -50,6 +49,18 @@
                     </li>
 
 
+                    <li class="" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a href="">
+                            <i class='bx bx-bell icon'></i>
+                            <span class="text nav-text">Notifications</span>
+                            <span>notification amount</span>
+
+                        </a>
+
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Notification #1</a></li>
+                        </ul>
+                    </li>
 
                     <li class="">
                         <a href="./getAllProjects.html">
@@ -83,7 +94,7 @@
             </div>
 
             <div class="bottom-content">
-                <li class="">
+                <li class="" style="margin-left: 30px">
                     <a class="logOutBtn">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Logout</span>
@@ -108,7 +119,6 @@
     </nav>
 
 
-  
 
     <section class="home">
 
@@ -178,7 +188,7 @@
     </div>
 
 
-    
+
     <script src="./assets/js/teams/getAllTeamController.js"></script>
     <script src="./assets/js/teams/newTeamController.js"></script>
     <script src="../Landing-page/assets/js/logoutScript.js"></script>
