--- a/Main-page/updateProject.html
+++ b/Main-page/updateProject.html
@@ -50,6 +50,19 @@
                     </li>
 
 
+                    <li class="" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a href="">
+                            <i class='bx bx-bell icon'></i>
+                            <span class="text nav-text">Notifications</span>
+                            <span>notification amount</span>
+
+                        </a>
+
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Notification #1</a></li>
+                        </ul>
+                    </li>
+
                     <li class="">
                         <a href="./getAllProjects.html">
                             <i class='bx bx-home-alt icon'></i>
@@ -82,7 +95,7 @@
             </div>
 
             <div class="bottom-content">
-                <li class="">
+                <li class="" style="margin-left: 30px">
                     <a class="logOutBtn">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Logout</span>
@@ -105,7 +118,6 @@
         </div>
 
     </nav>
-
     <section class="home">
 
         <div class="container mt-5">
@@ -120,8 +132,8 @@
 
                         <div class="mb-3">
                             <label for="projectName" class="form-label" required>Project neve</label>
-                            <textarea type="text" name="setprojectName" class="form-control"
-                                id="projectName" cols="30" rows="1" required></textarea>
+                            <textarea type="text" name="setprojectName" class="form-control" id="projectName" cols="30"
+                                rows="1" required></textarea>
                         </div>
 
                         <div class="mb-3">
@@ -130,7 +142,7 @@
                                 id="projectDescription" cols="30" rows="5" required></textarea>
                         </div>
 
-                    
+
                         <div class="mb-3">
                             <label for="projectStartDate" class="form-label" required>Kezdési idő</label>
                             <input type="datetime-local" class="form-control" id="projectStartDate"
@@ -149,7 +161,7 @@
                             </select>
                         </div>
 
-                  <button type="submit" class="btn btn-success">Project szerkesztése</button>
+                        <button type="submit" class="btn btn-success">Project szerkesztése</button>
                     </form>
                 </div>
             </div>
