--- a/Main-page/profile.html
+++ b/Main-page/profile.html
@@ -49,6 +49,18 @@
                     </li>
 
 
+                    <li class="" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a href="">
+                            <i class='bx bx-bell icon'></i>
+                            <span class="text nav-text">Notifications</span>
+                            <span>notification amount</span>
+
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Notification #1</a></li>
+                        </ul>
+                    </li>
+
                     <li class="">
                         <a href="./getAllProjects.html">
                             <i class='bx bx-home-alt icon'></i>
@@ -81,7 +93,7 @@
             </div>
 
             <div class="bottom-content">
-                <li class="">
+                <li class="" style="margin-left: 30px">
                     <a class="logOutBtn">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Logout</span>
@@ -105,7 +117,6 @@
 
     </nav>
 
-   
 
     <section class="home pt-5">
 
