--- a/Main-page/updateTask.html
+++ b/Main-page/updateTask.html
@@ -50,6 +50,20 @@
                     </li>
 
 
+                    <li class="" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a href="">
+                            <i class='bx bx-bell icon'></i>
+                            <span class="notification_amount text-center">1</span>
+                            <span class="text nav-text">Notifications</span>
+                            
+
+                        </a>
+
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Notification #1</a></li>
+                        </ul>
+                    </li>
+
                     <li class="">
                         <a href="./getAllProjects.html">
                             <i class='bx bx-home-alt icon'></i>
@@ -82,7 +96,7 @@
             </div>
 
             <div class="bottom-content">
-                <li class="">
+                <li class="" style="margin-left: 30px">
                     <a class="logOutBtn">
                         <i class='bx bx-log-out icon'></i>
                         <span class="text nav-text">Logout</span>
@@ -106,7 +120,6 @@
 
     </nav>
 
-   
 
 
 
@@ -119,44 +132,46 @@
 
                         <div class="mb-3">
                             <label for="taskDescription" class="form-label" required>Task neve</label>
-                            <textarea type="text" name="settaskTitle" class="form-control"
-                                id="taskTitle" cols="30" rows="5" required></textarea>
+                            <textarea type="text" name="settaskTitle" class="form-control" id="taskTitle" cols="30"
+                                rows="5" required></textarea>
                         </div>
 
 
                         <div class="mb-3">
                             <label for="taskDescription" class="form-label" required>Task leírása</label>
-                            <textarea type="text" name="settaskDescription" class="form-control"
-                                id="taskDescription" cols="30" rows="5" required></textarea>
+                            <textarea type="text" name="settaskDescription" class="form-control" id="taskDescription"
+                                cols="30" rows="5" required></textarea>
                         </div>
 
 
                         <div class="mb-3">
                             <label for="taskDeadLine" class="form-label" required>Határidő</label>
-                            <input type="datetime-local" class="form-control" id="taskDeadLine"
-                                name="taskDeadLine" aria-describedby="taskDeadLine" required>
+                            <input type="datetime-local" class="form-control" id="taskDeadLine" name="taskDeadLine"
+                                aria-describedby="taskDeadLine" required>
 
                         </div>
 
                         <div class="mb-3">
 
                             <div class="dropdown">
-                                <button class="form-control dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                  Developer/Task rewiever
+                                <button class="form-control dropdown-toggle" type="button" id="dropdownMenuButton"
+                                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Developer/Task rewiever
                                 </button>
                                 <div class="dropdown-menu form-select" aria-labelledby="dropdownMenuButton">
-                                  <input class="form-control" type="search" placeholder="Keresés" aria-label="Search" id="searchRewiever">
-                                  
-                                  <div id="rewieverList">
+                                    <input class="form-control" type="search" placeholder="Keresés" aria-label="Search"
+                                        id="searchRewiever">
+
+                                    <div id="rewieverList">
 
                                     </div>
                                 </div>
-                              </div>
+                            </div>
 
-                              <ul class="list-group" id="resultList">
-                              </ul>
+                            <ul class="list-group" id="resultList">
+                            </ul>
 
-                          </div>
+                        </div>
 
                         <div class="mb-3">
                             <label for="taskPriority">Task prioritása:</label>
@@ -168,7 +183,7 @@
                             </select>
                         </div>
 
-                  <button type="submit" class="btn btn-success">Task létrehozása</button>
+                        <button type="submit" class="btn btn-success">Task létrehozása</button>
                     </form>
                 </div>
             </div>
